--- a/css/grid.css
+++ b/css/grid.css
@@ -11,7 +11,7 @@
     grid-column: 1 / 13;
 }
 
-@media (min-width: 680px) {
+@media only screen and (min-width: 680px) {
     
     .grid-container {
         display: grid;
@@ -28,7 +28,7 @@
     }
 }
 
-@media (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
     
     .credits {
         grid-column: 6 / 10;
